manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: jatavkapilagritracker
spec:
    type: LoadBalancer
    ports:
    - port: 80 
      targetPort: 8000
    selector:

        app: jatavkapilagritracker
