manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agritracker-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kapiljatav.me
    - www.kapiljatav.me
    secretName: agritracker-tls
  rules:
  - host: kapiljatav.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agritracker-service
            port:
              number: 80
